# RubiksSolver

./: .gitignore  CMakeLists.txt  README.md
data/: state_complete.txt
src/: Defs.h  NodeData.h  NodeHeap.h  RubiksGenerator.cpp  RubiksGenerator.h  RubiksReader.cpp  RubiksReader.h  RubiksState.cpp  RubiksState.h  SolutionOptimizer.cpp  SolutionOptimizer.h  Solver.h  SolverAStar.cpp  SolverAStar.h  SolverAlgorithm.cpp  SolverAlgorithm.h  SolverDepth.cpp  SolverDepth.h  Util.cpp  Util.h  main.cpp
test/: CMakeLists.txt
test/data/: state1.txt
test/src/: RubiksStateTest.cpp  RubiksStateTest.h  SolutionOptimizerTest.cpp  SolutionOptimizerTest.h  SolverAlgorithmTest.cpp  SolverAlgorithmTest.h  TestUtils.cpp  TestUtils.h  main.cpp
